# Strinova-Nickname-AI

./: .gitignore  README.md
backend/: config.example.yaml  main.py  pyproject.toml
calabiyauify-names-ai/: 404.html  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.mjs
calabiyauify-names-ai/src/: App.vue
calabiyauify-names-ai/src/data/: meowQuotes.js
calabiyauify-names-ai/src/router/: index.js
calabiyauify-names-ai/src/views/: calabiyau-calculator.vue
