[project]
name = "Calabiyauify-names-AI"
version = "0.1.0"
description = "Calabiyauify-names-AI is a FastAPI application that provides a RESTful API for generating Calabiyauified versions of names using OpenAI's GPT-3.5-turbo model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.41.0",
    "colorlog>=6.8.2",
    "websockets>=13.0",
]
